# canvas-ai-cli

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: contract-gate.yml
docs/: agent-interface.md  autonomous-workflow.md  command-reference.md  examples.md  index.md  mcp-server.md  quickstart.md  safety-policy.md  troubleshooting.md  workflow-examples.md
schemas/: agent-capabilities.json  agent.capabilities.schema.json  assignment.show.schema.json  assignments.due.schema.json  auth.login.schema.json  auth.set-mode.schema.json  auth.status.schema.json  courses.list.schema.json  do.json  do.result.schema.json  feedback.add.schema.json  feedback.list.schema.json  init.schema.json  metrics.summary.schema.json  org.info.schema.json  org.probe.schema.json  org.set.schema.json  plan.result.schema.json  review.json  review.result.schema.json  runs-show.json  runs-tail.json  runs.show.schema.json  runs.tail.schema.json  submit.json  submit.result.schema.json
scripts/: contract_gate.py
src/canvas_ai/: ai_helpers.py  canvas_client.py  cli.py  config.py  history.py  mcp_server.py  org.py  policy.py  workflow.py
templates/: config.example.json  policy.example.json
tests/: test_canvas_client.py  test_cli.py  test_contract_gate.py  test_envelope_snapshots.py  test_mcp_server.py  test_org.py
tests/fixtures/: golden_do_keys.json  snapshot_do.json  snapshot_feedback_add.json  snapshot_metrics_summary.json  snapshot_submit.json
